--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,30 @@ html{
   scroll-behavior: smooth;
 }
 
-a { color: inherit; } 
+a { color: inherit; }
+
+
+::-moz-selection { /* Code for Firefox */
+  color: white;
+  background: #6e2121;
+}
+
+::selection {
+  color: white;
+  background: #831818;
+}
+
+.nav{
+  color: #84C1D9;
+  padding: 20px 20px 0 20px;
+  font-family: "Inconsolata", monospace;
+  font-size: 20px;
+}
+
+.nav__a{
+  margin-right: 10px;
+  text-underline-offset: 5px;
+}
 
 .header {
   display: grid;
@@ -80,10 +103,11 @@ a { color: inherit; }
   font-size: 25px;
   color: #A65353;
   margin-bottom: 10px;
+  text-underline-offset: 5px;
 }
 
 .project{
-  padding: 0 30px;
+  padding: 20px 30px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 40px;
@@ -132,18 +156,42 @@ a { color: inherit; }
 
 .language{
   height: 100px;
-  background-color: #fff;
   border-radius: 10px;
   margin: 5px;
+  filter: grayscale(45%);
+}
+
+.language:hover{
+  filter: grayscale(0%);
+}
+
+.section3{
+  text-align: center;
+  background-color: #090e1f;
+}
+
+.section3 .main__h2{
+  color: #84C1D9;
+  margin-bottom: 25px;
+  font-size: 26px;
 }
 
 
-
-.projects__img{
-  width: 850px;
+.social_medias__img{
+  width: 50px;
+  border-radius: 10px;
+  background-color: white;
+  margin-right: 20px;
 }
 
-@media (max-width: 600px) {
+
+@media (max-width: 626px) {
+  .nav{
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
   .header{
     justify-items: center; 
   }
@@ -162,10 +210,6 @@ a { color: inherit; }
   .language{
     height: 67px;
   }
-
-  .projects__img{
-    width: 442px;
-  }
 }
 
 @media (max-width: 490px) {
@@ -175,5 +219,12 @@ a { color: inherit; }
 
   .main__p{
     padding: 0 0;
+  }
+}
+
+@media(max-width: 400px){
+  .nav{
+    font-size: 16px;
+    text-align: start;
   }
 }
